--- a/Longana/Longana.vcxproj.filters
+++ b/Longana/Longana.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="hand.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="round.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="player.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="round.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
